<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/sync_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/title_activity_sync"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/upload_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sync_title"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/upload_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:layout_toStartOf="@id/upload"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/upload_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_subtitle"
                android:layout_below="@id/upload_title"
                android:layout_toStartOf="@id/upload"
                android:layout_alignParentStart="true"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/upload"
                style="@style/Widget.Design.FloatingActionButton"
                android:backgroundTint="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_cloud_upload_24"
                android:contentDescription="@string/upload_description"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/upload_box"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/download_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:layout_toStartOf="@id/download"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/download_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_subtitle"
                android:layout_below="@id/download_title"
                android:layout_toStartOf="@id/download"
                android:layout_alignParentStart="true"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/download"
                style="@style/Widget.Design.FloatingActionButton"
                android:backgroundTint="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_cloud_download_24"
                android:contentDescription="@string/download_description"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </RelativeLayout>
</layout>