<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="card"
            type="es.uam.eps.dadm.cards.model.Card" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10sp">

        <TextView
            android:id="@+id/current_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{card.date.substring(0, 10)}"
            android:textSize="20sp"
            android:textColor="@color/purple_500" />

        <TextView
            android:id="@+id/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/card_edit_question_title"
            android:textSize="20sp"
            android:textColor="@color/purple_500"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_question_hint"
            android:layout_marginHorizontal="50dp"
            android:id="@+id/question_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/question"
                android:text="@{card.question}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/answer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_edit_answer_title"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/purple_500"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_answer_hint"
            android:layout_marginHorizontal="50dp"
            android:id="@+id/answer_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answer"
                android:text="@{card.answer}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/card_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_error"
                android:text="@string/cancel_card_edit_button_title" />

            <Button
                android:id="@+id/accept_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:text="@string/accept_card_edit_button_title" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_card"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/purple_500"
            android:src="@drawable/ic_baseline_delete_24"
            android:contentDescription="@string/delete_content_description" />

        </RelativeLayout>
    </LinearLayout>
</layout>