<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/log_in_register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/log_in_register_text"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/log_in_register_text">

            <TextView
                android:layout_marginTop="25dp"
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/log_out_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/log_out_button"
                android:layout_below="@id/welcome_text"
                android:textColor="@android:color/holo_red_dark"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/log_in_register"
            android:layout_below="@id/log_in_register_text">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_email_hint"
                android:layout_marginHorizontal="50dp"
                android:id="@+id/email_layout"
                android:layout_marginTop="25dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_password_hint"
                android:layout_marginHorizontal="50dp"
                android:layout_below="@id/email_layout"
                android:id="@+id/password_layout"
                android:layout_marginTop="25dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/log_in_register_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_marginTop="25dp"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/log_in_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in_button"
                    android:insetRight="10dp"
                    android:textColor="@android:color/holo_green_dark"/>

                <Button
                    android:id="@+id/register_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button"
                    android:insetLeft="10dp"
                    android:textColor="@android:color/holo_green_dark"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>
        </RelativeLayout>
    </RelativeLayout>
</layout>